--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 40px;
     padding: 25px;
-    margin-bottom: 40px;
+    margin-bottom: 5%;
 }
 
 .navbar--title {
