--- a/src/components/Form/Meme/styles.css
+++ b/src/components/Form/Meme/styles.css
@@ -1,5 +1,6 @@
 .meme {
     display: flex;
+    position: relative;
     width: 100%;
     margin: 2% 2%;
     align-items: center;
@@ -8,4 +9,37 @@
 .meme > img {
     max-width: 90%;
     margin: auto;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
 }
